--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -32,7 +32,8 @@ services:
     - MONGO_INITDB_ROOT_USERNAME=devdb
     - MONGO_INITDB_ROOT_PASSWORD=devdb1234
     volumes:
-    - mongodb:/data/db
+    - mongodb: /data/db
+    - mngodb-bkp: /data/bkp
     restart: always
     networks:
     - springbootbridge
