--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   springboot:
-    image: phanidocker1912/spring-boot-mongo:1
+    image: phanidocker1912/spring-boot-mongo:latest
     restart: always # This will be ignored if we deploy in docker swarm
     container_name: springbootapp
     environment:
