--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.1'
 services:
   springboot:
-    image: phanidocker1912/spring-boot-mongo:1
+    image: phanidocker1912/spring-boot-mongo:latest
     restart: always # This will be ignored if we deploy in docker swarm
-    container_name: 
+    container_name: springboot
     environment:
     - MONGO_DB_HOSTNAME=mongo
     - MONGO_DB_USERNAME=devdb
@@ -27,7 +27,7 @@ services:
 
   mongo:
     image: mongo
-    container_name: 
+    container_name: springboot-mongo
     environment:
     - MONGO_INITDB_ROOT_USERNAME=devdb
     - MONGO_INITDB_ROOT_PASSWORD=devdb1234
