--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -22,6 +22,17 @@ services:
         condition: on-failure
         delay: 10s
         max_attempts: 5
+    depends_on:
+      - springboot
+    deploy:  # This will be considered only in docker swarm.
+      replicas: 2
+      update_config:
+        parallelism: 1
+        delay: 20s
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 5    
     #networks:
     #- springbootbridge
 
