--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -61,7 +61,7 @@ volumes:
 
 networks:
   customoverlay:
-    driver: overlay
+    #driver: overlay
     external: true
   #springbootbridge :
    #driver: bridge
